--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title>Ethereum Paper Wallet Generator | Paperwalleth</title>
+<title>Ethereum Paper Wallet Generator | geocashingCULT</title>
 <meta name="description" content="Fast, open-source universal ethereum paper wallet generator, supporting almost every major cryptocurrency">
 <meta property="og:description" content="Fast, open-source universal ethereum paper wallet generator, supporting almost every major cryptocurrency">
 <meta name="keywords" content="paper wallet, paperwalleth, ethereum , eth wallet, wallet, wallet generator, open-source eth wallet, ethereum wallet, cryptocurrency, crypto wallet">
@@ -35,6 +35,15 @@
 <h1 class="noprint" id="title"><a href="https://www.paperwalleth.com/" title="Ethereum Paper Wallet Generator - Open source ethereum paper wallet generator">Ethereum Paper Wallet Generator</a></h1>
 <br>
 <div id="container">
+  <h2>
+    <center>
+      Paperwallet Generator GeoCashingCULT
+
+    </center>
+
+  </h2>
+</div>
+<div id="container">
 
   <div class="noprint"><button class="b1" onclick="generate()">Generate</button>
     <button class="b1" onclick="window.print()">Print</button>
@@ -51,19 +60,14 @@
 
 
 <div class="noprint" id="container">
-<p><b>Paperwalleth </b> is open-source, client-side and fast Ethereum paper wallet generator site. Let's generate <a href="https://paperwalleth.com/">Ethereum wallet</a> and All ERC-20 coins paper wallet.. This completely safe!</p>
-<p><b>Security</b></p>
-<p>Security As explained above, everything is computed only in your browser. Nothing ever leaves your machine, or even your browser tab. There is no database, no server-side code. Everything vanishes when you close your tab.</p>
-<p>Paperwalleth cannot and will never store your private key, and if you don't trust it, you have 2 ways to ensure your key remains private:<br>
-- Once the web page is loaded, you can turn off the internet and continue playing, it will work seamlessly<br>
-- You can also download the latest build of paperwalleth and use it on a completely offline computer<br></p>
-<p><b>Compatibility</b></p>
-<p>Any address generated with this site is %100 compatible, which means you can use it for an ICO, an airdrop, or just to withdraw your funds from an exchange.
-Generated Address is 100% compatible with MyEtherWallet, MetaMask, Mist, and geth.</p><br>
-<center><p>All responsibility belongs to the creater of the paper wallet.</p></center>
+  
+  <center>
+    <p>All responsibility belongs to the creater of the paper wallet.</p>
+  
+    Credits to https://paperwalleth.com <p><br></p></center>
 </div>
 <div class="noprint" id="footer">
-<a href="https://ethereumaddressgenerator.com/" target="_blank" style="text-decoration: none">Ehereum paper wallet</a> | <a href="https://paperwalletcrypto.com/" target="_blank" style="text-decoration: none">Paper wallet</a> </div>
+<a href="https://github.com/michael-spengler/paperwallet-generator" target="_blank" style="text-decoration: none">check the code on github</a>  </div>
 <script>
   const urlParam = window.location.search.substring(1); if(urlParam){document.getElementById ("currencyName").textContent = urlParam + " Paper Wallet"; document.title = urlParam + " Paper Wallet";}
   </script>
