--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
 <div class="noprint" id="container">
   
   <center>
-    <p>All responsibility belongs to the creater of the paper wallet.</p>
+    <p>All responsibility belongs to the creator of the paper wallet.</p>
   
-    Credits to https://paperwalleth.com <p><br></p></center>
+    Credits to https://paperwalleth.com & https://paperwalletcrypto.com <p><br></p></center>
 </div>
 <div class="noprint" id="footer">
 <a href="https://github.com/michael-spengler/paperwallet-generator" target="_blank" style="text-decoration: none">check the code on github</a>  </div>
